objects/GEMS_Category__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Categories</relationshipLabel>
        <relationshipName>Categories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Cancel_Date__c</fullName>
        <label>Cancel Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancellation_Code__c</fullName>
        <label>Cancellation Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CBC - Cancel BlueSTAR Category</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancellation_Date__c</fullName>
        <label>Cancellation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancellation_Explanation__c</fullName>
        <label>Cancellation Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cancellation_Reason__c</fullName>
        <label>Cancellation Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>401 Misc - Below Percentage</fullName>
                </value>
                <value>
                    <fullName>402 Misc - Reason/Unknown</fullName>
                </value>
                <value>
                    <fullName>403 Misc - Non-Payment of Dues</fullName>
                </value>
                <value>
                    <fullName>404 Misc - Grp Moved Out of State</fullName>
                </value>
                <value>
                    <fullName>405 Misc - Never Effective</fullName>
                </value>
                <value>
                    <fullName>406 Misc - New Group Number</fullName>
                </value>
                <value>
                    <fullName>408 Misc - Other UW Requirements</fullName>
                </value>
                <value>
                    <fullName>409 Misc - Acct has 0 Subs</fullName>
                </value>
                <value>
                    <fullName>410 Misc - Coverage Discontinued</fullName>
                </value>
                <value>
                    <fullName>411 Misc - New Decision Maker</fullName>
                </value>
                <value>
                    <fullName>412 Misc - Trans to Existing Acct</fullName>
                </value>
                <value>
                    <fullName>413 Misc - Broker Recommendation</fullName>
                </value>
                <value>
                    <fullName>414 Misc - Cons Cov w/1+ Carrier</fullName>
                </value>
                <value>
                    <fullName>415 Moved to Other BCBS Plan</fullName>
                </value>
                <value>
                    <fullName>416 Misc - Owner Chg/Merg/Acq</fullName>
                </value>
                <value>
                    <fullName>417 Misc - Parent Co Decision</fullName>
                </value>
                <value>
                    <fullName>418 Misc - Absorbed by ParentGrp</fullName>
                </value>
                <value>
                    <fullName>419 Misc - Out-of-Business</fullName>
                </value>
                <value>
                    <fullName>427 Misc - Political</fullName>
                </value>
                <value>
                    <fullName>433 Misc - Trans Due to Ben Chg</fullName>
                </value>
                <value>
                    <fullName>436 Misc - Changed Brokers</fullName>
                </value>
                <value>
                    <fullName>501 Claims - Service/Problems</fullName>
                </value>
                <value>
                    <fullName>502 Mbrship - Billing Serv/Prob</fullName>
                </value>
                <value>
                    <fullName>503 Service - Local Office</fullName>
                </value>
                <value>
                    <fullName>504 Service - Customer Service</fullName>
                </value>
                <value>
                    <fullName>608 Network - PPO/POS Hospital</fullName>
                </value>
                <value>
                    <fullName>609 Network - PPO/POS Phys</fullName>
                </value>
                <value>
                    <fullName>612 Network - HMO Hospital</fullName>
                </value>
                <value>
                    <fullName>613 Network - HMO Phys Network</fullName>
                </value>
                <value>
                    <fullName>614 Prod Design - Prescription</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancellation_Status__c</fullName>
        <label>Cancellation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Cancellation Rejected</fullName>
                </value>
                <value>
                    <fullName>Requested Cancellation</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Failure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancellation_Submitted_Date__c</fullName>
        <label>Cancellation Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Categories</relationshipLabel>
        <relationshipName>GEMS_Categories</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category_Cobra_Code__c</fullName>
        <label>Category Cobra Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>MC</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category_Description__c</fullName>
        <label>Category Description</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Has_Group_Sections__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Has Group Sections?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDescUpdate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDescUpdate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsNew__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsNew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsUpdated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsUpdated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mailing_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mailing Address</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>GEMS_Address__c.Mailing_Usage__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$Source.Account__c</field>
                <operation>equals</operation>
                <valueField>GEMS_Address__c.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>GEMS_Address__c</referenceTo>
        <relationshipLabel>Categories</relationshipLabel>
        <relationshipName>MailingCategories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Members_Derivation_Type__c</fullName>
        <label>Derivation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>CH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_Cancellation_Date__c</fullName>
        <label>Requested Cancellation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Underwriter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Underwriter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GEMS_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UniqueCatCombo__c</fullName>
        <label>UniqueCatCombo</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Usage_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Usage - Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Usage_Mailing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Usage - Mailing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Usage_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Usage - Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Usage_Reporting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Usage - Reporting</label>
        <type>Checkbox</type>
    </fields>
    <label>GEMS Category</label>
    <nameField>
        <label>Category No.</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GEMS Categories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Billing_Mailing_product_Reporting_Check</fullName>
        <active>true</active>
        <errorConditionFormula>(Usage_Billing__c = False &amp;&amp;  Usage_Mailing__c = False &amp;&amp;  Usage_Product__c = False &amp;&amp;  Usage_Reporting__c =False &amp;&amp;  Case__r.RecordType.DeveloperName = &apos;GEMS_Account_Structure&apos;)</errorConditionFormula>
        <errorMessage>Any of Usage - Billing or Usage - Mailing or Usage - Product or Usage - Reporting checkbox should be checked</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Length5Digit</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(LEN( Name ) = 4),NOT($Profile.Name=&apos;Integration Profile&apos;),NOT($Profile.Name=&apos;System Administrator&apos;))</errorConditionFormula>
        <errorMessage>Category No. - Expecting a 4-digit number</errorMessage>
    </validationRules>
</CustomObject>